# template-worker

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  config.yaml.sample  docker-compose.yml  tw.toml.sample
.cargo/: config.toml
.sqlx/: query-004cf1fd1199e1cda093a543ed33a902a1b2c91423bcaa5f118e01fb9c031c75.json  query-018927abe03f55786f1c7f5ba09e50d2a82e7187379f7e36558b60ad42feb3cf.json  query-046ca0f8c7c1bb8d9979db2196c736855bfd03334f4fa33c514e77b7e9c07962.json  query-0e47338125f2d194032d6d6113600120dc15a09c0bc94b4fbd345e595e52a417.json  query-2938337c17ceda38a35cb833cf6fd8fd40d5aa0ab009d9eeda1393ad9edb64a0.json  query-38749b9d19e0a415a8d7c2b89f481a1598228ce1e4a0691cd29b810ec7d7a895.json  query-3c8085bb4bd12f4c0036ee89449d41a96efbb42b31e545c1db98a6c466f67c27.json  query-5565768ca06b058a29c6f37edf2722b1ca4b2dbcbfa017a87c8abd0d24ec17cf.json  query-59e7a224ac9d6715927bdbbb61dc6516b841f10bd9e1fd3530749e5beb112ba6.json  query-5a87e0ced1f7f39a455c7fad4f54d8da64a19c5a5c57d5b150c655a2ee922bf1.json  query-5f9232da8ee10cb4087bf8a6cb753b0c2c24f16fef5911302b187ff874e7da31.json  query-62247aa99000b1c149298a3bf7eb52dde355f0d2fff2b91f7dccc8354618fde3.json  query-6ca48bb322f788c216d1ed77a57ca86d7cc82cea079e963f005e9ec70e6cecb6.json  query-7d9bda10405eff7d9ec36816daf689adc51e8d4d60f147675aa8b4ede2c6ea96.json  query-837f241d4e4923649bb523f8211be27b1008585547680475effa70e8c97658c8.json  query-8d9d24f1793d10b45c320e9f74214f9e209c8a2719cb87ae021f586fa5d821dd.json  query-9119a96a5b34a455ee2d81c9999f7f5bb11cb747f8fb567e48a209d0d6341df7.json  query-abd2cc696802cd3834f0a798999467f8e4c5d8835db08e7c155ed368c220ef22.json  query-abe15b4ff0be0a0d431954a867be8c66fcf3d4eeac6d44bef365239681364fd7.json  query-ad846ba374f984d6da27d07a479e5bf9e1b146a0d549ee6b636b7cc83ecdf68d.json  query-c125db0a77743d38ad1ed439f98ba5c8821dde847ba2c515f4efcfc8fac1b715.json  query-c212cf1a31123037d88d83e8a73aac53892226b220925827c4fae7861bfab8b6.json  query-c283a403233812e8521d0fb23f081db3281c2207e327d074380bd5297004ac06.json  query-cd2c89143f2faac381bf30f241e5c7d2344161ebed8e266cccc7731dd0a41742.json  query-db07e99155f54ea4435fe263ab955f4b6f074f7833a9e551790ef818063ed57a.json  query-dc8c89aa3bef1de14d432e665c184fc7accfa099f037a518525af6cf3e208238.json  query-e31e8b209a28278814bb317c92dc2dd5ea279cfdf54124653a7e3795dded47bb.json  query-e884b2d7ca694cfbef7f6713e043310a07a0754ec4752b1e7d9ad7f60f548fcc.json  query-eeca78159e68491cb07008571f5336708816332d1a7c0f05a0c9b3a206f3e8e9.json  query-f19c82870c6a3616a4d4ec7b71852825e685e8174578d96f14983494c92ad6f9.json  query-f6396f2cd753c425a18c9ff9df81d6674f595680d45c728bd33a491dcecd93e1.json  query-f759c4b0d536526695bc5a3dccbf819f908e68ac5b907a20c613262af1e34f10.json
crates/rust.templating/: Cargo.toml
crates/rust.templating.docgen/: Cargo.toml
crates/rust.templating/src/: cache.rs  core.rs  lib.rs
crates/rust.templating/src/lang_lua/: ctx.rs  event.rs  handler.rs  mod.rs  primitives_docs.rs  state.rs
crates/rust.templating/src/lang_lua/plugins/: async.rs  discord.rs  img_captcha.rs  interop.rs  kv.rs  mod.rs  page.rs  permissions.rs  promise.rs  stings.rs  stream.rs  typesext.rs
crates/rust.templating/src/lang_lua/plugins/lune/: utils.rs
crates/rust.templating/src/lang_lua/plugins/lune/datetime/: values.rs
crates/rust.templating/src/lang_lua/plugins/lune/roblox/datatypes/: conversion.rs
crates/rust.templating/src/lang_lua/plugins/lune/roblox/datatypes/types/: axes.rs  color_sequence_keypoint.rs  enum_item.rs  number_sequence_keypoint.rs  ray.rs  region3.rs  udim.rs  udim2.rs  vector2.rs  vector2int16.rs  vector3int16.rs
crates/rust.templating/src/lang_lua/plugins/lune/roblox/document/: format.rs  kind.rs  postprocessing.rs
crates/rust.templating/src/lang_lua/plugins/lune/roblox/instance/: base.rs  data_model.rs  mod.rs
crates/rust.templating/src/lang_lua/plugins/lune/roblox/reflection/: enums.rs  property.rs
crates/rust.templating/src/lang_lua/plugins/lune/roblox/shared/: userdata.rs
crates/rust.templating/src/lang_lua/thread_proc/: impl.rs  mod.rs
crates/rust.templating/src/lang_lua/vm_manager/: mod.rs  threadperguild_strategy.rs  threadpool_strategy.rs
crates/rust.templating/src/serenitystore/: mod.rs
crates/templating-runtime/: Cargo.toml
deploy/: seed.iblcli-seed  setup.py  updategit.sh
deploy/docker/: nginx.conf  setup.py
deploy/events/: events_extract.py  events_tab.html
deploy/gosdk/: eureka-dovewing.ts  types.ts
deploy/misc/: proposed_unified_templates.sql  proposed_unified_templates_old.sql  proxytester.py
deploy/systemd-example/: ar-nirn-staging.service  ar-sandwich-staging.service  ar-sandwich.service  splashtail-staging-bot.service  splashtail-staging-jobs.service  splashtail-staging-templateworker.service  splashtail-staging-webserver.service
devutils/: add_perm.py  add_perm_override.py  all_buckets_list.py  check_guild_count.py  download_backups.py  find_encrypted.py  merge_guilds_to_single_bucket.py  migrate_guild_data.py  migrate_nonencrypted_backups.py  seaweed_to_blob.py  single_bucket_list.py  update_builtins.sh
devutils/deploy/: setup.py  updategit.sh
devutils/events/: events_extract.py
devutils/helper_scripts/: migration_job_owner_to_guild.py  mkarseed
devutils/willow/: README.md  eslint.config.js  package-lock.json  package.json
docs/: legacyarch.md
docs/commands/: 1-setup.md
docs/legacy/: languagerant.md  workers.md
docs/msyscall/: khronosvalue.ts
luau/bot/: README.md  builtins.register.luau  builtins.templateloop.luau  entrypoint.luau  getsettings.py  init.luau  setup-types.sh
luau/builtins_patches/: devs.luau
luau/twshell/: .luaurc  entrypoint.shell.luau  shell.luau
src/: config.rs  data.rs  dispatch.rs  docgen.rs  event_handler.rs  expiry_tasks.rs  http.rs  jobserver.rs  lib.rs  lockdowns.rs  main.rs  objectstore.rs  on_startup.rs  pages.rs  pages2.rs  props.rs  register.rs  sandwich.rs  serenitystore.rs  temporary_punishments.rs  vmbench.rs
src/api/: auth.rs  data.rs  extractors.rs  gkv.rs  internal_api.rs  mod.rs  public_api.rs  server.rs  types.rs
src/cmds/: bot.rs  (+2 more)
(+419 files in other folders)
