[package]
name = "template-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tracing = "0.1"
env_logger = "0.11"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
async-trait = "0.1.80"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
governor = "0.6"
extract_map = { version = "0.3", features = ["serde"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"]}
clap = { version = "4.5.16", features = ["derive"] }
moka = { version = "0.12", features = ["future", "futures-util", "sync"] }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
khronos_runtime = { git = "https://github.com/anti-raid/khronos" }
dapi = { git = "https://github.com/anti-raid/khronos" }
vfs = { git = "https://github.com/Anti-Raid/rust-vfs", features = ["embedded-fs"] }
rust-embed = { version = "8.7.0", features = ["debug-embed", "interpolate-folder-path"] }
futures = "0.3"
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }
tokio-util = { version = "0.7", features = ["time"] }
console-subscriber = { version = "0.4" }
tokio-tungstenite = { version = "0.28" }

# events
strum = { version = "0.26", features = ["derive"] }

# http
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tower-service = "0.3"

# openapi
utoipa = { version = "5", features = ["chrono", "uuid", "indexmap", "axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored", "reqwest"] }

# ts
ts-rs = { version = "11", features = ["serde-json-impl", "chrono-impl", "uuid-impl", "indexmap-impl"] }

# sandwich
serde_repr = "0.1"

# AWS
aws-sdk-s3 = { version = "1" }
aws-smithy-types = { version = "1" }

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread", "tracing", "process", "signal"]

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[features]
default = ["worker-staticref"]
worker-staticref = [] # Use &'static T references for internal worker data
