[package]
name = "template-worker"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "unwind" # Change from "abort"
debug = true     

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
governor = "0.6"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"]}
clap = { version = "4.5.16", features = ["derive"] }
moka = { version = "0.12", features = ["future", "futures-util", "sync"] }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
khronos_runtime = { git = "https://github.com/anti-raid/khronos" }
khronos_ext = { git = "https://github.com/anti-raid/khronos" }
dapi = { git = "https://github.com/anti-raid/khronos" }
vfs = { git = "https://github.com/Anti-Raid/rust-vfs", features = ["embedded-fs"] }
rust-embed = { version = "8.7.0", features = ["debug-embed", "interpolate-folder-path"] }
futures = "0.3"
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }
tokio-util = { version = "0.7", features = ["time"] }
rmp-serde = { version = "1.3.1" }
rustyline = "15"

# http
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }

# openapi
utoipa = { version = "5", features = ["chrono", "uuid", "indexmap", "axum_extras"] }
utoipa-axum = "0.2"

# sandwich
serde_repr = "0.1"

# AWS
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }
aws-smithy-types = { version = "1" }

# Mesophyll
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio-stream = "0.1"

# discord event gateway
stratum_client = { git = "https://github.com/anti-raid/stratum" }
stratum_common = { git = "https://github.com/anti-raid/stratum" }
bitflags = "2.11.0"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread", "tracing", "process", "signal"]

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[features]
default = []

[build-dependencies]
tonic-prost-build = "0.14"
