[package]
name = "tw"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "unwind" # Change from "abort"
# debug = true     
# debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0"
serde_json = "1.0"
governor = "0.10"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"]}
moka = { version = "0.12", features = ["future", "futures-util", "sync"] }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
khronos_runtime = { git = "https://github.com/anti-raid/khronos" }
khronos_ext = { git = "https://github.com/anti-raid/khronos" }
dapi = { git = "https://github.com/anti-raid/khronos" }
vfs = { git = "https://github.com/Anti-Raid/rust-vfs", features = ["embedded-fs"] }
rust-embed = { version = "8.7.0", features = ["interpolate-folder-path"] }
futures = "0.3"
dashmap = { version = "6", features = ["serde", "inline", "rayon"] }
rmp-serde = { version = "1.3.1" }
bytes = { version = "1", features = ["serde"] }

# http
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }

# Mesophyll
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio-stream = "0.1"

# discord event gateway
stratum_client = { git = "https://github.com/anti-raid/stratum" }
stratum_common = { git = "https://github.com/anti-raid/stratum" }
bitflags = "2.11.0"

# blob
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
parking_lot = "0.12.5"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread", "tracing", "process", "signal"]

[features]
default = []

[build-dependencies]
tonic-prost-build = "0.14"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost", "tonic"]
