[package]
name = "templating"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
moka = { version = "0.12", features = ["future", "futures-util", "sync"] }
indexmap = { version = "2", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] } 
chrono = { version = "0.4", features = ["serde"]}
scc = "2"
governor = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
include_dir = "0.7.3" # Needed to load templates etc.

# @lune/datetime
chrono_lc = "0.1"
thiserror = "1.0"
self_cell = "1"

# @lune/regex
regex = "1"

# @lune/serde
async-compression = { version = "0.4", features = [
    "tokio",
    "brotli",
    "deflate",
    "gzip",
    "zlib",
] }
bstr = "1.9"
lz4 = "1.26"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }
digest = "0.10.7"
hmac = "0.12.1"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
# This feature MIGHT break due to the unstable nature of the digest crate.
# Check before updating it.
blake3 = { version = "=1.5.0", features = ["traits-preview"] }

# Lune Roblox
glam = "0.27"
rand = "0.8"
rbx_binary = "0.7.7"
rbx_dom_weak = "2.9.0"
rbx_reflection = "4.7.0"
rbx_reflection_database = "0.2.12"
rbx_xml = "0.13.5"

# Anti-Raid specific
permissions = { path = "../../../../core/rust/rust.permissions" }
limits = { path = "../../../../core/rust/rust.limits" }
splashcore_rs = { path = "../../../../core/rust/rust.std" }
silverpelt = { path = "../../../../core/rust/rust.silverpelt", features = ["template-worker-dispatch"] }
captcha = { git = "https://github.com/Anti-Raid/captcha", branch = "master" }
sandwich_driver = { path = "../../../../core/rust/rust.sandwich_driver" }
templating_docgen = { path = "../rust.templating.docgen" }
ar_settings = { path = "../../../../core/rust/rust.settings" }
async-trait = "0.1.80"

# Template language support
mlua = { git = "https://github.com/mlua-rs/mlua", features = ["async", "luau", "serialize", "macros"] } # Supported by default

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread"]

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"

[features]
default = ["thread_proc"]
thread_proc = [] # Use threads for the Lua VM
send = ["mlua/send"]